# trabalho-cg-1

./: CMakeLists.txt
src/: etc.cpp  main.cpp
src/lib/: extras.h
